@@ -6,6 +6,7 @@ version 1.9.5, in progress
   "gretldata"
 - "coint2" (Johansen test): print the log-likelihood, plus improve the
   printing of the Pi matrix when exogenous regressors are present
+- "coint2": add a --silent option
 - VARs: add $fevd accessor to get the forecast error variance
   decomposition as a matrix; also add GUI access to forecast variance
   decomposition plots
